--- a/prepros-6.config
+++ b/prepros-6.config
@@ -4,7 +4,10 @@
   "exportConfig": true,
   "fileConfigs": [],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "styles",
+      "styles/partials"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -23,7 +26,8 @@
       "imports": [
         "styles/partials/_setup.scss",
         "styles/partials/_variables.scss",
-        "styles/partials/_landingpage.scss"
+        "styles/partials/_landingpage.scss",
+        "styles/partials/_main.scss"
       ]
     }
   ],
