--- a/prepros-6.config
+++ b/prepros-6.config
@@ -4,10 +4,7 @@
   "exportConfig": true,
   "fileConfigs": [],
   "fileTree": {
-    "expandedDirs": [
-      "styles",
-      "styles/partials"
-    ],
+    "expandedDirs": [],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -24,10 +21,10 @@
     {
       "path": "styles/style.scss",
       "imports": [
+        "styles/partials/_main.scss",
         "styles/partials/_setup.scss",
         "styles/partials/_variables.scss",
-        "styles/partials/_landingpage.scss",
-        "styles/partials/_main.scss"
+        "styles/partials/_landingpage.scss"
       ]
     }
   ],
@@ -73,7 +70,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7879,
+    "port": 7883,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
