--- a/prepros-6.config
+++ b/prepros-6.config
@@ -4,7 +4,10 @@
   "exportConfig": true,
   "fileConfigs": [],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "styles",
+      "styles/partials"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -69,7 +72,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7883,
+    "port": 7879,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
