made mostly responsive, need to organize script.js

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -26,7 +26,8 @@
       "imports": [
         "styles/partials/_variables.scss",
         "styles/partials/_setup.scss",
-        "styles/partials/_landingpage.scss"
+        "styles/partials/_landingpage.scss",
+        "styles/partials/_main.scss"
       ]
     }
   ],
