Commiting to repo

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -23,12 +23,13 @@
       "imports": [
         "styles/partials/_variables.scss",
         "styles/partials/_setup.scss",
-        "styles/partials/_landingpage.scss"
+        "styles/partials/_landingpage.scss",
+        "styles/partials/_main.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
