near final commit.need to tweak some cross browser stuff. Mostly completed media quierries want to live test now :rock:

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -2,11 +2,16 @@
   "name": "project4-Mikey-Luca",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [],
+  "fileConfigs": [
+    {
+      "path": "assets/favicon.png",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"compiler-png\":{\"enabled\":true,\"originalSize\":8775,\"newSize\":8015}}"
+    }
+  ],
   "fileTree": {
     "expandedDirs": [
       "styles",
-      "styles/partials"
+      "assets"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
